[package]
name = "nestac"
version = "0.1.0"
edition = "2021"
authors = ["Ramon Moraes <mitternacht92.pub@gmail.com>"]
description = "library to access nested structures using path-like string format."
license = "MIT"
documentation = "https://docs.rs/nestac/latest/nestac/"
homepage = "https://github.com/mitternacht92/nestac"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde_json = "1.0.114"
