[package]
name = "nestac"
version = "0.5.0"
edition = "2021"
authors = ["Ramon Moraes <ramonmoraes.foss@gmail.com>"]
description = "library to access nested structures using path-like string format."
license = "MIT"
documentation = "https://docs.rs/nestac/latest/nestac/"
homepage = "https://github.com/rmoraes92/nestac"
repository = "https://github.com/rmoraes92/nestac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
serde_json = "1.0.140"
toml = "0.8"

[dev-dependencies]
string_from = "0.1.0"
